-mobrien Font Color Fix, was not showing up when you typed due to color and background color being the same color.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -172,6 +172,7 @@ white-space: nowrap;
 }
 .home-page-navbar-login input {
   background-color:#FFF;
+  color:#000;
   margin-top:2px;
   margin-bottom:2px;
 }
